[tool.commitizen]
name = "cz_conventional_commits"
version = "0.7.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:^version"
]


[tool.ruff]
line-length = 88
ignore = [
    "E501",
    "D1",
    "D415",
]

[tool.ruff.isort]
known-first-party = ["tests"]

[tool.ruff.pydocstyle]
convention = "google"


[tool.mypy]
files = [
    "mail_handler",
    "tests"
]
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
    [[tool.mypy.overrides]]
    module = ["mail_handler.*"]
    # Ensure full coverage
    disallow_untyped_calls = true
    disallow_untyped_defs = true
    disallow_incomplete_defs = true
    # disallow_untyped_decorators = true
    # Restrict dynamic typing
    disallow_any_generics = true
    disallow_subclassing_any = true
    warn_return_any = true

    [[tool.mypy.overrides]]
    module = ["tests.*"]
    disallow_untyped_defs = false
    disallow_untyped_decorators = false


[tool.pytest.ini_options]
minversion = "8.0.0"
testpaths = "tests"
addopts = "--strict-markers"
norecursedirs = [
    ".*",
    "build",
    "dist",
    "CVS",
    "_darcs",
    "{arch}",
    "*.egg",
    "venv",
    "env",
    "virtualenv"
]


[tool.coverage]
    [tool.coverage.report]
    show_missing = true
    exclude_lines = [
        # Have to re-enable the standard pragma
        'pragma: no cover',

        # Don't complain about missing debug-only code:
        'def __repr__',
        'if self\.debug',

        # Don't complain if tests don't hit defensive assertion code:
        'raise AssertionError',
        'raise NotImplementedError',

        # Don't complain if non-runnable code isn't run:
        'if 0:',
        'if __name__ == .__main__.:'
    ]
    omit = [
        'env/*',
        'venv/*',
        '*/virtualenv/*',
        '*/virtualenvs/*',
        '*/tests/*'
    ]


[tool.poetry]
name = "pycontw-mail-handler"
version = "0.7.0"
description = "Mail toolkit for PyCon Taiwan"
authors = ["Lee-W <weilee.rx@gmail.com>"]
license = "MIT"
readme = "docs/README.md"
packages = [
    {"include" = "mail_handler"}
]

[tool.poetry.scripts]
render_mail = "mail_handler.render_mail:main"
send_mail = "mail_handler.send_mail:main"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.2"
jinja2 = "^3.0.0"
typing-extensions = "^4.1.0"

[tool.poetry.dev-dependencies]
# task management
invoke = "^2.2.0"
# test
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.0.0"
coverage = {extras = ["toml"], version = "^7.5.4"}
tox = "^3.15.1"
# style
ruff = "^0.4.10"
black = ">=24.1.1"
mypy = "^1.10.1"
# security
bandit = "^1.7.9"
pip-audit = "^2.4.5"
# git
commitizen = "^3.0.0"
pre-commit = "^3.3.0"
# documentation
mkdocs = "^1.3.0"
mkdocs-material = "^9.5.27"

[build-system]
requires = ["poetry>=1.7.0"]
build-backend = "poetry.core.masonry.api"
